--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>mc.alk</groupId>
     <artifactId>BattleScoreboardAPI</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.7.2</version>
+    <version>1.1.7.5</version>
     <name>BattleScoreboardAPI</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,6 +27,12 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
+            <version>1.7.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
             <version>1.7.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
@@ -83,10 +89,10 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                        <configuration>
-                            <!-- Specify to remove all unneeded classes -->
+                        <!-- Specify to remove all unneeded classes -->
+                        <!-- <configuration>
                             <minimizeJar>true</minimizeJar>
-                        </configuration>
+                        </configuration> -->
                     </execution>
                 </executions>
             </plugin>
